[package]
name = "terrars-cloudflare-cloudflare"
edition = "2021"
version = "0.1.0"
description = "Pre-generated Terrars Cloudflare bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-cloudflare-cloudflare"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.5"

[features]
access_application = []
access_ca_certificate = []
access_group = []
access_identity_provider = []
access_keys_configuration = []
access_mutual_tls_certificate = []
access_organization = []
access_policy = []
access_rule = []
access_service_token = []
account = []
account_member = []
address_map = []
api_shield = []
api_token = []
argo = []
authenticated_origin_pulls = []
authenticated_origin_pulls_certificate = []
byo_ip_prefix = []
certificate_pack = []
custom_hostname = []
custom_hostname_fallback_origin = []
custom_pages = []
custom_ssl = []
data_access_identity_provider = []
data_account_roles = []
data_accounts = []
data_api_token_permission_groups = []
data_devices = []
data_ip_ranges = []
data_list = []
data_lists = []
data_load_balancer_pools = []
data_origin_ca_root_certificate = []
data_record = []
data_rulesets = []
data_zone = []
data_zone_dnssec = []
data_zones = []
device_dex_test = []
device_managed_networks = []
device_policy_certificates = []
device_posture_integration = []
device_posture_rule = []
device_settings_policy = []
dlp_profile = []
email_routing_address = []
email_routing_catch_all = []
email_routing_rule = []
email_routing_settings = []
fallback_domain = []
filter = []
firewall_rule = []
gre_tunnel = []
healthcheck = []
ipsec_tunnel = []
list = []
list_item = []
load_balancer = []
load_balancer_monitor = []
load_balancer_pool = []
logpull_retention = []
logpush_job = []
logpush_ownership_challenge = []
magic_firewall_ruleset = []
managed_headers = []
mtls_certificate = []
notification_policy = []
notification_policy_webhooks = []
origin_ca_certificate = []
page_rule = []
pages_domain = []
pages_project = []
queue = []
r2_bucket = []
rate_limit = []
record = []
regional_hostname = []
ruleset = []
spectrum_application = []
split_tunnel = []
static_route = []
teams_account = []
teams_list = []
teams_location = []
teams_proxy_endpoint = []
teams_rule = []
tiered_cache = []
total_tls = []
tunnel = []
tunnel_config = []
tunnel_route = []
tunnel_virtual_network = []
turnstile_widget = []
url_normalization_settings = []
user_agent_blocking_rule = []
waiting_room = []
waiting_room_event = []
waiting_room_rules = []
waiting_room_settings = []
web3_hostname = []
worker_cron_trigger = []
worker_domain = []
worker_route = []
worker_script = []
workers_kv = []
workers_kv_namespace = []
zone = []
zone_cache_variants = []
zone_dnssec = []
zone_lockdown = []
zone_settings_override = []
